# ddog

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: builder.rs  client.rs  lib.rs
src/routes/: mod.rs
src/routes/metrics/: distribution.rs  get_metrics.rs  mod.rs  series.rs  tags.rs
src/routes/v2/: mod.rs
src/routes/v2/metrics/: distribution.rs  mod.rs  series.rs
src/types/: base.rs  env.rs  mod.rs  route.rs  routes.rs  version.rs
src/types/routes/: mod.rs  tr.rs
src/types/routes/v1/: metric.rs  mod.rs
src/types/routes/v2/: metric.rs
src/types/routes/v2/metrics/: distribution.rs  mod.rs  series.rs  tags.rs
tests/: builder.rs  distribution.rs  get_metrics.rs  json_validation.rs  series.rs  tags.rs
