[package]
name = "ddog"
version = "0.0.2"
edition = "2021"
authors = ["asnared"]
readme = "README.md"
repository = "https://github.com/abigger87/ddog/"
license = "AGPL-3.0-only"
description = """
A Minimal Datadog SDK Built in Pure Rust.
"""
keywords = ["sdk", "datadog", "api", "rust", "logging"]
exclude = [
    "assets",
    ".env",
    ".env.prod"
]

[dependencies]
chrono = { version = "0.4.21", features = ["serde"] }
serde = { version = "1.0.143", features = [] }
serde_with = "2.0.0"
tracing = "0.1.36"
async-trait = "0.1.57"
reqwest = { version = "0.11.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4.2"
