[package]
name = "ddog"
version = "0.0.5"
edition = "2021"
authors = ["asnared"]
readme = "README.md"
repository = "https://github.com/abigger87/ddog/"
license = "AGPL-3.0-only"
description = """
A Minimal Datadog SDK Built in Pure Rust.
"""
keywords = ["sdk", "datadog", "api", "rust", "logging"]
exclude = [
    "assets",
    ".env",
    ".env.prod"
]

[dependencies]
tracing = "0.1.36"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
chrono = { version = "0.4.21", features = ["serde"] }
serde = "1.0.143"
serde_json = "1.0.83"
serde_with = "2.0.0"
async-trait = "0.1.57"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio-test = "0.4.2"
